[package]
name = "solana-transaction-executor"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bincode = "1.3"
chrono = "0.4"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = "^1.0"
serde_json = "1.0"
solana-client = "1.14.19"
solana-sdk = "1.14.19"
solana-transaction-status = "1.14.19"
tokio = { version = "1", features = ["full"] }
