[package]
name = "solana-transaction-executor"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = "1.3"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = "^1.0"
serde_json = "1.0.149"
solana-client = "3.1.11"
solana-compute-budget-interface = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.11"
tokio = { version = "1", features = ["full"] }
